<resources>
    <string name="app_name">SudokuAnke</string>
    <string name="u_blind">u blind</string>
    <string name="no_files_to_load">No files to load</string>
    <string name="exit">Exit</string>
    <string name="delete">Delete</string>
    <string name="load">Load</string>
    <string name="undo_for_the_crazy">Undo (for the crazy)</string>
    <string name="save">Save</string>
    <string name="sudoku_name">Sudoku name</string>
    <string name="settings">Settings</string>
    <string name="buttons">BUTTONS</string>
    <string name="rainbow_shine">Rainbow shine</string>
    <string name="game_colors">GAME COLORS</string>
    <string name="reset_to_defaults">Reset to defaults</string>
    <string name="change">Change</string>
    <string name="read_sudoku_from_picture">Read sudoku from picture</string>
    <string name="take_picture">Take picture</string>
    <string name="a_sudoku_for_anke">A Sudoku for Anke</string>
    <string name="start_new_game">Start new game</string>
    <string name="insert_board">Insert board</string>
    <string name="import_board">Import board</string>
    <string name="empty">Empty</string>
    <string name="solve_for_the_cheaters">Solve (for the cheaters)</string>
    <string name="undo_all_for_the_bad">Undo all (for the bad)</string>
    <string name="undo_for_the_weak">Undo (for the weak)</string>
</resources>