<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10pt"
    android:layout_marginVertical="10pt">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30pt"
        android:layout_marginBottom="30pt"
        android:layout_gravity="center_horizontal"
        android:text="@string/a_sudoku_for_anke"
        android:textAlignment="center"
        android:textSize="12pt"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <com.frontend.ShinyButton
                android:id="@+id/startButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:text="@string/start_new_game"
                android:maxLines="1"/>

            <com.frontend.ShinyButton
                android:id="@+id/loadButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:text="@string/load"
                android:maxLines="1"/>

            <com.frontend.ShinyButton
                android:id="@+id/insertBoardButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:text="@string/insert_board"
                android:maxLines="1"/>

            <com.frontend.ShinyButton
                android:id="@+id/importBoardButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:text="@string/import_board"
                android:maxLines="1"/>

            <com.frontend.ShinyButton
                android:id="@+id/settingsButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/settings"
                android:maxLines="1"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
