<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30pt"
    android:layout_marginBottom="10pt"
    android:layout_marginLeft="10pt"
    android:layout_marginRight="10pt">

    <include layout="@layout/grid"/>

    <com.frontend.NumberSelector
        android:id="@+id/numberSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.frontend.ShinyButton
            android:id="@+id/exitButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/exit"
            android:maxLines="1"/>

        <com.frontend.ShinyButton
            android:id="@+id/undoButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/undo_for_the_crazy"
            android:textSize="11sp"
            android:maxLines="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/sudokuName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/sudoku_name"
            android:text=""/>

        <com.frontend.ShinyButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:text="@string/save"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

    </LinearLayout>

</LinearLayout>
