<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="40pt"
    android:layout_marginTop="20pt"
    android:layout_marginLeft="10pt"
    android:layout_marginRight="10pt">

    <TextView
        android:id="@+id/warningTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20pt"
        android:text="@string/no_files_to_load"
        app:layout_constraintBottom_toTopOf="@+id/fileSelectionBox"
        app:layout_constraintTop_toTopOf="parent"/>

    <Spinner
        android:id="@+id/fileSelectionBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.frontend.ShinyButton
            android:id="@+id/loadButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/load"
            android:maxLines="1"/>

        <com.frontend.ShinyButton
            android:id="@+id/exitButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/exit"
            android:maxLines="1"/>

        <com.frontend.ShinyButton
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/delete"
            android:maxLines="1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
